speakerまわり微調整

--- a/ejs/speaker.ejs
+++ b/ejs/speaker.ejs
@@ -52,7 +52,9 @@
             <tr>
               <th>14:20〜</th>
             </tr>
-              <td>JSフレームワークと年月 - ExtJS, AngularJS, React -</td>
+              <td>JSフレームワークと年月 - ExtJS, AngularJS, React -
+              <a href="#A032" class="holetableindent">Sencha Ext JS 6 の紹介</a><br>
+              <a href="#A031" class="holetableindent">Angular2でアプリを書いた話</a></td>
             </tr>
             <tr>
               <th>15:20〜</th>
@@ -62,7 +64,7 @@
             <tr>
               <th>16:20〜</th>
             </tr>
-              <td><a href="#A060">10年超のサービスにSass導入してモダン化した話</a><br><br></td>
+              <td><a href="#A060" class="pb1em">10年超のサービスにSass導入してモダン化した話</a></td>
             </tr>
           </tbody>
         </table>
@@ -84,7 +86,7 @@
               <th>11:40〜</th>
             </tr>
             <tr>
-              <td><a href="#B030">gulp ベストプラクティス<br><br></a></td>
+              <td><a href="#B030" class="pb1em">gulp ベストプラクティス</a></td>
             </tr>
             <tr>
               <th>12:40〜</th>
@@ -96,7 +98,7 @@
               <th>14:20〜</th>
             </tr>
             <tr>
-              <td><a href="#B050">Sassを使ってるならBourbon/Neatを使え!</a></td>
+              <td><a href="#B050" class="pb2em">Sassを使ってるならBourbon/Neatを使え!</a></td>
             </tr>
             <tr>
               <th>15:20〜</th>
