スポンサー更新

--- a/ejs/speaker.ejs
+++ b/ejs/speaker.ejs
@@ -6,7 +6,7 @@
   <script>
     $(function(){
       $(".scroll").on("click",function(){
-        var p = $($(this).attr("data-target")).offset().top;
+        var p = $($(this).attr("data-target")).offset().top-100;
         $('html,body').animate({ scrollTop: p }, 'fast');
         return false;
       });
@@ -123,7 +123,7 @@
   </section><!-- /.column speaker -->
   <% });%>
   <section>
-    <p class="nobtntxt">and more ...</p>
+    <p class="nobtntxt">and more ...?</p>
   </section>
 
   <div id="page-top" class="hvr-icon-bob">
