--- a/ejs/handson.ejs
+++ b/ejs/handson.ejs
@@ -114,7 +114,8 @@
 				</dl>
 				<!--<p>その他ご不明な点がありましたら<a href="">こちら</a>からお問い合わせください。</p>-->
 			</div>
-			<a href="http://ptix.co/1RHIQDV" target="_blank" class="kfugBtn hvr-back-pulse">一般参加申込はこちら!!</a>
+			<a target="_blank" class="kfugBtn hvr-back-pulse">チケットは完売しました</a>
+			<p>追加のチケット情報などは <a href="https://www.facebook.com/frontconf2016/">Facebookページ</a>をチェック!!</p>
 		</div>
 	</section>
 	
