--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -85,14 +85,14 @@
 			<br>
 
 			<a href="http://ptix.co/1RHIQDV" target="_blank" class="kfugBtn hvr-back-pulse">
-				参加申込はこちら!!
+				満員御礼!!チケットは完売しました!!
 			</a>
 			<p>
-				ハンズオン優先参加等の特典付きのスポンサーチケットは
-				<a href="http://the-frontend-conference-2016.peatix.com/">
-					こちら
+				追加のチケット情報などは、
+				<a href="https://www.facebook.com/frontconf2016/">
+					Facebookページ
 				</a>
-				からお申し込みください!!
+				をチェック!!
 			</p>
 
 			<br><br><br>
@@ -244,9 +244,6 @@
 			</ul><!-- /.sponsor-list -->
             </div>
 			<br><br>
-			<a href="http://the-frontend-conference-2016.peatix.com/" class="kfugBtn hvr-back-pulse">
-				スポンサー掲載ご希望の方はこちらよりお申し込みください
-			</a>
 		</div><!-- /.inner -->
 
 	</section><!-- /#sponsor -->
