--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -71,7 +71,7 @@
 	</div>
 
 			<div class="bnrbox cf">
-				<div class="bnr"><a href="http://kfug.connpass.com/event/26509/" target="_blank" class="hvr-icon-wobble-horizontal">LT登壇者募集中!!</a></div>
+				<div class="bnr"><a href="http://kfug.connpass.com/event/26509/" target="_blank" class="hvr-icon-wobble-horizontal">LT登壇者決定!!</a></div>
 			</div><!-- /.bnrbox cf -->
 		</div><!-- /.inner -->
 	</section><!-- /.main-area -->
