--- a/ejs/partyover.ejs
+++ b/ejs/partyover.ejs
@@ -211,6 +211,9 @@
             <% odd = !odd;%>
             <% } %>
             <% });%>
+            <div class="col-sm-12 staff">
+                <a href="https://twitter.com/potato4d" target="_blank">花谷拓磨 (Potato4d)</a>
+            </div>
 
             <div class="col-sm-12">
                 <h3 class="text-center">ネットワーク(NSC)</h3>
@@ -333,6 +336,9 @@
             </div>
             <div class="col-sm-12 staff">
                 <span>ng-kyoto の皆様</span>
+            </div>
+            <div class="col-sm-12 staff">
+                <span>ご参加頂いた &nbsp;たくさんの皆様</span>
             </div>
         </div>
 
