--- a/sass/_partyover.scss
+++ b/sass/_partyover.scss
@@ -8,6 +8,16 @@
 	height:4em;
 }
 
+h2{
+	margin-top: 4em;
+	margin-bottom: 1em;
+}
+
+.ancUnit p,
+.ancHeadUnit p{
+	font-size: .9em;
+}
+
 .photoesUnit{
 	color:red;
 	.image{
