--- a/ejs/partyover.ejs
+++ b/ejs/partyover.ejs
@@ -239,6 +239,7 @@
             <% odd = !odd;%>
             <% } %>
             <% });%>
+            <div class="col-xs-6"></div>
             <div class="col-sm-12 staff">
                 <a href="https://twitter.com/potato4d" target="_blank">花谷拓磨 (Potato4d)</a>
             </div>
