--- a/ejs/partyover.ejs
+++ b/ejs/partyover.ejs
@@ -89,7 +89,7 @@
             <div class="col-sm-6">
                 <img src="./img/anc_area.png" alt="" class="fitimg">
                 <p>参加者の地域別アンケートでは関西圏からの参加が非常に多かったです。</p>
-                <p>告知が分かりづらかった…との声もあるため、遠方からの参加者も集められるよう次回以降の告知は頑張っていきたいと思いました。/p>
+                <p>告知が分かりづらかった…との声もあるため、遠方からの参加者も集められるよう次回以降の告知は頑張っていきたいと思いました。</p>
             </div>
         </div>
 
