--- a/ejs/partyover.ejs
+++ b/ejs/partyover.ejs
@@ -239,7 +239,7 @@
             <% odd = !odd;%>
             <% } %>
             <% });%>
-            <div class="col-xs-6"></div>
+            <div class="col-xs-6">&nbsp;</div>
             <div class="col-sm-12 staff">
                 <a href="https://twitter.com/potato4d" target="_blank">花谷拓磨 (Potato4d)</a>
             </div>
@@ -361,14 +361,16 @@
                 <h3 class="text-center">SPECIAL THANKS</h3>
             </div>
             <div class="col-sm-12 staff">
-                <span>wordbench の皆様</span>
+                <span>WordBench の皆様</span>
             </div>
             <div class="col-sm-12 staff">
-                <span>ng-kyoto の皆様</span>
+                <a href="http://ng-kyoto.github.io/" target="_blank">ng-kyoto の皆様</a>
             </div>
             <div class="col-sm-12 staff">
                 <span>ご参加頂いた &nbsp;たくさんの皆様</span>
             </div>
+
+            <p>このページの管理は <a href="https://github.com/kfug/frontconf2016">Github</a>にて行っております。リンク先の追加、修正希望などはお気軽にissue等でお声がけください。</p>
         </div>
 
     </div>
