--- a/ejs/partyover.ejs
+++ b/ejs/partyover.ejs
@@ -89,12 +89,12 @@
 
         <div class="row ancUnit">
             <div class="col-sm-6">
-                <img src="./img/anc_age.png" alt="" class="fitimg">
+                <img src="./img/age.png" alt="" class="fitimg">
                 <p>参加の年代別アンケートではほぼ30代の方の参加を中心に、20代、40代とまんべんなく参加頂いていたようです。</p>
                 <p>スタッフの方では学生スタッフなど、若いスタッフも多く参加していて、ベテランから若手まで幅広い人が参加しているという印象でした。</p>
             </div>
             <div class="col-sm-6">
-                <img src="./img/anc_area.png" alt="" class="fitimg">
+                <img src="./img/address.png" alt="" class="fitimg">
                 <p>参加者の地域別アンケートでは関西圏からの参加が非常に多かったです。</p>
                 <p>告知が分かりづらかった…との声もあるため、遠方からの参加者も集められるよう次回以降の告知は頑張っていきたいと思いました。</p>
             </div>
@@ -309,14 +309,14 @@
                 <h3 class="text-center">大目付</h3>
             </div>
             <div class="col-sm-12 staff">
-                <a href="http://nocono.net/">Abe Asami</a>
+                <a href="http://nocono.net/" target="_blank">Abe Asami</a>
             </div>
 
             <div class="col-sm-12">
                 <h3 class="text-center">企画・総務</h3>
             </div>
             <div class="col-sm-12 staff">
-                <a href="http://chatbox-inc.com/page/member/mikakane">後藤 知宏</a>
+                <a href="http://chatbox-inc.com/page/member/mikakane" target="_blank">後藤 知宏</a>
             </div>
 
             <div class="col-sm-12">
